--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                             <div class="block-text">
                                 <h3 class="title" data-aos-duration="1000" data-aos="fade-up">Horarios de Atención</h3>
                                 <ul>
-                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Alameda Pardo 123, Cercado</li>
-                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Lunes - Domingo:</span> 11:30 am - 5:30 pm</li>
-                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Paseo Las Terrazas, Mall Aventura</li>
-                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Lunes - Domingo:</span> 11:30 am - 5:30 pm</li>
+                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Alameda Pardo 123, Cercado</span></li>
+                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Lunes - Domingo:11:30 am - 5:30 pm</span></li>
+                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Paseo Las Terrazas, Mall Aventura</span></li>
+                                    <li data-aos-duration="1000" data-aos="fade-up"><span>Lunes - Domingo: 11:30 am - 5:30 pm</span></li>
                                 </ul>
 
                                 <!-- <div class="d-flex">
