--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                                     <li>Atmósfera tradicionale</li>
                                                     <li>Seguridad en cada espacio </li>
                                                 </ul>
-                                                <a href="#" class="tf-button style3">read more</a>
+                                                <!-- <a href="#" class="tf-button style3">read more</a> -->
                                             </div>
                                         </div>
                                         <!-- <div class="content-inner">
@@ -554,14 +554,14 @@
                                 <img src="assets/images/icon/shopping-bag.png" alt="" data-aos-duration="1000" data-aos="fade-up">
                                 <h4 data-aos-duration="1000" data-aos="fade-up">DELIVERY</h4>
                                 <p data-aos-duration="1000" data-aos="fade-up">Entendemos que no siempre puedes visitarnos <br> pero no es problema porque nosotros <br> te llevamos tus platillos favoritos</p>
-                                <a href="#" class="tf-button style3">order now</a>
+                                <a href="#" class="tf-button style3">Reservar aquí</a>
                             </div>
                             <div class="item content">
                                 <img src="assets/images/icon/gift-card.png" alt="" data-aos-duration="1000" data-aos="fade-up">
                                 <h4 data-aos-duration="1000" data-aos="fade-up">RESERVAS</h4>
                                 <p data-aos-duration="1000" data-aos="fade-up">Separa una mesa para que compartas las mejores <br> experiencias acompañado de tu familia, <br> amigos o compañeros de trabajo
                                 </p>
-                                <a href="#" class="tf-button style3" >buy now</a>
+                                <a href="#" class="tf-button style3" >Reservar aquí</a>
                             </div>
                             <div class="item image" data-aos-duration="1000" data-aos="fade-left">
                                 <img src="assets/images/che_carlitos/IMG_9371.jpg" alt="">
@@ -592,7 +592,7 @@
                                 <p class="text" data-aos-duration="1000" data-aos="fade-up">El secreto detrás de una carne asada perfecta radica en el respeto por la materia prima y la técnica precisa. Primero, selecciono cortes de alta calidad, siempre frescos y con el marmoleo justo para asegurar la jugosidad. Luego, la clave está en el fuego: un buen asado requiere brasas bien calientes y una temperatura uniforme. La carne debe ser colocada a la distancia adecuada del fuego para obtener ese dorado perfecto por fuera, mientras conserva su ternura en el interior. El sazonado debe ser simple, realzando el sabor natural sin sobrecargarlo.</p>
 
 
-                                <a href="#" class="tf-button style3" >view all chef</a>
+                                <!-- <a href="#" class="tf-button style3" >view all chef</a> -->
                             </div>
                         </div>
                     </div>
